add page content

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>404 Not found</title>
+    <title>OPS, 404 Not found</title>
 </head>
 <body>
-
+    <p>OPS, 404 Not found</p>
 </body>
 </html>
