fix html template js quote

--- a/app/templates/do_task/task.html
+++ b/app/templates/do_task/task.html
@@ -28,3 +28,7 @@
          </div>
     </div>
 {% endblock %}
+
+{% block scripts %}
+    <script src="url_for('static',filename='javascript/bootstrap.min.js')"></script>
+{% endblock %}
