--- a/app/templates/do_task/test_task.html
+++ b/app/templates/do_task/test_task.html
@@ -28,3 +28,16 @@
          </div>
     </div>
 {% endblock %}
+
+
+
+
+{#
+{% block scripts %}
+    <script src="{{ url_for('static',filename='javascript/bootstrap.min.js') }}"></script>
+{% endblock %}
+
+{% block styles %}
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+{% endblock %}
+#}
