--- a/app/templates/do_task/task.html
+++ b/app/templates/do_task/task.html
@@ -1,5 +1,5 @@
 {% extends "bootstrap/base.html" %}
-{% block title %}Blurprint{% endblock %}
+{% block title %}Blueprint{% endblock %}
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
          <div class="container">
@@ -11,7 +11,7 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                     </button>
-                 <a class="navbar-brand" href="/">Flasky</a>
+                 <a class="navbar-brand" href="/">DO TASK</a>
              </div>
              <div class="navbar-collapse collapse">
                  <ul class="nav navbar-nav">
@@ -24,11 +24,41 @@
 {% block content %}
     <div class="container">
          <div class="page-header">
-             <h1>Hello, {{ name }}!</h1>
+             <h1 >Complete your task everyday!</h1>
          </div>
+
+        <div class="container">
+            <div>
+                <h4>2019</h4>
+            </div>
+            <div>
+                {% for month19 in [1,2,3,4,5,6,7,8,9,10,11,12] %}
+                <div>
+                    <button type="button" class="btn bg-primary">{{ month19 }}</button>
+                    <div>
+                        <p>task1</p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+
+        <div class="container">
+            <div>
+                <h4>2018</h4>
+            </div>
+            <div>
+                {% for month18 in [1,2,3,4,5,6,7,8,9,10,11,12] %}
+                <div>
+                    <button type="button" class="btn bg-primary">{{ month18  }}</button>
+                    <div>
+                        <p>task1</p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
+
 {% endblock %}
 
-{% block scripts %}
-    <script src="url_for('static',filename='javascript/bootstrap.min.js')"></script>
-{% endblock %}
