--- a/app/templates/do_task/task.html
+++ b/app/templates/do_task/task.html
@@ -29,18 +29,22 @@
 
         <div class="container">
             <div>
-                <h4>2019</h4>
+                <h3>2019</h3>
             </div>
-            <div>
+
+
+            <div class="container">
                 {% for month19 in [1,2,3,4,5,6,7,8,9,10,11,12] %}
                 <div>
-                    <button type="button" class="btn bg-primary">{{ month19 }}</button>
+                    <button type="button" class="btn bg-primary">{{ month19 }} 月</button>
                     <div>
                         <p>task1</p>
                     </div>
                 </div>
                 {% endfor %}
             </div>
+
+
         </div>
 
         <div class="container">
@@ -50,7 +54,7 @@
             <div>
                 {% for month18 in [1,2,3,4,5,6,7,8,9,10,11,12] %}
                 <div>
-                    <button type="button" class="btn bg-primary">{{ month18  }}</button>
+                    <button type="button" class="btn bg-primary">{{ month18  }} 月</button>
                     <div>
                         <p>task1</p>
                     </div>
