--- a/app/templates/do_task/task.html
+++ b/app/templates/do_task/task.html
@@ -27,41 +27,49 @@
              <h1 >Complete your task everyday!</h1>
          </div>
 
-        <div class="container">
-            <div>
-                <h3>2019</h3>
-            </div>
 
-
+        {% for year in [2019,2018] %}
             <div class="container">
-                {% for month19 in [1,2,3,4,5,6,7,8,9,10,11,12] %}
                 <div>
-                    <button type="button" class="btn bg-primary">{{ month19 }} 月</button>
-                    <div>
-                        <p>task1</p>
-                    </div>
+                    <h3>{{ year }}</h3>
                 </div>
-                {% endfor %}
-            </div>
 
 
-        </div>
-
-        <div class="container">
-            <div>
-                <h4>2018</h4>
-            </div>
-            <div>
-                {% for month18 in [1,2,3,4,5,6,7,8,9,10,11,12] %}
-                <div>
-                    <button type="button" class="btn bg-primary">{{ month18  }} 月</button>
+                <div class="container">
+                    {% for month in cal[year] %}
                     <div>
-                        <p>task1</p>
+                        <button type="button" class="btn bg-primary" data-toggle="collapse" data-target="#task{{ year }}{{ month }}">{{ month }} 月</button>
+                        <div id="task{{ year }}{{ month }}" class="collapse">
+                            <div class="container">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Time</th>
+                                            <th>Task</th>
+                                            <th>Status</th>
+                                        </tr>
+                                    </thead>
+
+                                    {% for day in cal[year][month] %}
+                                        <tbody>
+                                            <tr class="success">
+                                                <td>{{ month }}-{{ day }}</td>
+                                                <td>{{ cal[year][month][day][0] }}</td>
+                                                <td>{{ cal[year][month][day][2] }}</td>
+                                            </tr>
+                                        </tbody>
+                                    {% endfor %}
+
+                                </table>
+                            </div>
+                        </div>
                     </div>
+                    {% endfor %}
                 </div>
-                {% endfor %}
             </div>
-        </div>
+        {% endfor %}
+
+
     </div>
 
 {% endblock %}
