--- a/app/templates/do_task/task.html
+++ b/app/templates/do_task/task.html
@@ -41,7 +41,8 @@
                         <button type="button" class="btn bg-primary" data-toggle="collapse" data-target="#task{{ year }}{{ month }}">{{ month }} 月</button>
                         <div id="task{{ year }}{{ month }}" class="collapse">
                             <div class="container">
-                                <table class="table">
+                                <table class="table table-striped">
+
                                     <thead>
                                         <tr>
                                             <th>Time</th>
@@ -49,17 +50,15 @@
                                             <th>Status</th>
                                         </tr>
                                     </thead>
-
-                                    {% for day in cal[year][month] %}
-                                        <tbody>
-                                            <tr class="success">
+                                    <tbody>
+                                        {% for day in cal[year][month] %}
+                                            <tr>
                                                 <td>{{ month }}-{{ day }}</td>
                                                 <td>{{ cal[year][month][day][0] }}</td>
                                                 <td>{{ cal[year][month][day][2] }}</td>
                                             </tr>
-                                        </tbody>
-                                    {% endfor %}
-
+                                        {% endfor %}
+                                    </tbody>
                                 </table>
                             </div>
                         </div>
