--- a/app/templates/do_task/task.html
+++ b/app/templates/do_task/task.html
@@ -1,5 +1,21 @@
 {% extends "bootstrap/base.html" %}
 {% block title %}Blueprint{% endblock %}
+
+{% block head %}
+    {{ super() }}
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <style type="text/css">
+        div.panel-body {
+            padding: 3px;
+        }
+
+        div.form-group {
+            margin: 5px
+        }
+    </style>
+{% endblock %}
+
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
          <div class="container">
@@ -38,7 +54,7 @@
                 <div class="container">
                     {% for month in cal[year] %}
                     <div>
-                        <button type="button" class="btn bg-primary" data-toggle="collapse" data-target="#task{{ year }}{{ month }}">{{ month }} 月</button>
+                        <button type="button" class="btn bg-primary btn-block" data-toggle="collapse" data-target="#task{{ year }}{{ month }}">{{ month }} 月</button>
                         <div id="task{{ year }}{{ month }}" class="collapse">
                             <div class="container">
                                 <table class="table table-striped">
@@ -54,9 +70,18 @@
                                         {% for day in cal[year][month] %}
                                             <tr>
                                                 <td>{{ month }}-{{ day }}</td>
-                                                <td>{{ cal[year][month][day][0] }}</td>
-                                                <td>{{ cal[year][month][day][2] }}</td>
+                                                <td>{{ cal[year][month][day][0][0] }}</td>
+                                                <td>{{ cal[year][month][day][0][2] }}</td>
                                             </tr>
+                                            {% if cal[year][month][day]|length>1 %}
+                                                {% for task in cal[year][month][day][1:] %}
+                                                <tr>
+                                                    <td> </td>
+                                                    <td>{{ cal[year][month][day][loop.index][0] }}</td>
+                                                    <td>{{ cal[year][month][day][loop.index][2] }}</td>
+                                                </tr>
+                                                {% endfor %}
+                                            {% endif %}
                                         {% endfor %}
                                     </tbody>
                                 </table>
