--- a/app/templates/do_task/test_task.html
+++ b/app/templates/do_task/test_task.html
@@ -34,6 +34,7 @@
 
 {#
 {% block scripts %}
+    {{ super() }}
     <script src="{{ url_for('static',filename='javascript/bootstrap.min.js') }}"></script>
 {% endblock %}
 
