--- a/app/templates/do_task/task.html
+++ b/app/templates/do_task/task.html
@@ -69,7 +69,11 @@
                                     </thead>
                                     <tbody>
                                         {% for day in cal[year][month] %}
-                                            <tr>
+                                        {% if (cal[year][month][day][0][2]!= '-' and cal[year][month][day][0][2]) %}
+                                            <tr class="success">
+                                        {% else %}
+                                            <tr class="default" is_d="{{ cal[year][month][day][0][2] }}">
+                                        {% endif %}
                                                 <td>{{ month }}-{{ day }}</td>
                                                 <td>{{ cal[year][month][day][0][0] }}</td>
                                                 <td>{{ cal[year][month][day][0][2] }}</td>
@@ -83,7 +87,14 @@
                                             </tr>
                                             {% if cal[year][month][day]|length>1 %}
                                                 {% for task in cal[year][month][day][1:] %}
-                                                <tr>
+
+                                                {% if (cal[year][month][day][loop.index][2]!= '-' and cal[year][month][day][loop.index][2]) %}
+
+                                                    <tr class="success">
+                                                {% else %}
+                                                    <tr class="default">
+                                                {% endif %}
+
                                                     <td> </td>
                                                     <td>{{ cal[year][month][day][loop.index][0] }}</td>
                                                     <td>{{ cal[year][month][day][loop.index][2] }}</td>
