--- a/app/templates/do_task/task.html
+++ b/app/templates/do_task/task.html
@@ -27,11 +27,12 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                     </button>
-                 <a class="navbar-brand" href="/">DO TASK</a>
+                 <a class="navbar-brand" href="/task/index">DO TASK</a>
              </div>
              <div class="navbar-collapse collapse">
                  <ul class="nav navbar-nav">
-                     <li><a href="/">Home</a></li>
+                     <li><a href="/task/index">Home</a></li>
+                     <li><a href="/admin">Admin</a></li>
                  </ul>
              </div>
          </div>
